# DoRayMe

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
samplescenes/: orrery.yml
source/: CMakeLists.txt  camera.cpp  canvas.cpp  colour.cpp  intersect.cpp  intersection.cpp  main.cpp  math_helper.cpp  matrix.cpp  pattern.cpp  renderstat.cpp  sequence.cpp  transformation.cpp  tuple.cpp  tuples.cpp  world.cpp  worldoptimiser.cpp
source/include/: boundingbox.h  camera.h  canvas.h  colour.h  cone.h  csg.h  cube.h  cylinder.h  gradientpattern.h  group.h  intersect.h  intersection.h  light.h  list.h  material.h  math_helper.h  matrix.h  object.h  objfile.h  pattern.h  plane.h  ray.h  renderstat.h  ringpattern.h  sequence.h  shape.h  smoothtriangle.h  sphere.h  testpattern.h  testshape.h  transformation.h  triangle.h  tuple.h  tuples.h  uv_pattern.h  world.h  worldbuilder.h  worldoptimiser.h
source/objects/: light.cpp  object.cpp  sphere.cpp
source/pattern/: checkerspattern.h  gradientpattern.h  luapattern.h  ringpattern.h  strippattern.h  testpattern.h  texturemap.h
source/shapes/: cone.cpp  csg.cpp  cube.cpp  cylinder.cpp  group.cpp  light.cpp  material.cpp  object.cpp  objfile.cpp  plane.cpp  ray.cpp  shape.cpp  smoothtriangle.cpp  sphere.cpp  testshape.cpp  triangle.cpp
source/uvpattern/: uv_aligncheck.h  uv_checkers.h  uv_image.h
source/worldbuilder/: default_world.cpp  hw3file.cpp  octreeoptimisation.cpp
source/worldoptimiser/: bvhoptimisation.cpp  octreeoptimisation.cpp
tests/: CMakeLists.txt  arealight_test.cpp  boundingbox_test.cpp  camera_test.cpp  canvas_test.cpp  ch10_test.cpp  ch11_reflection.cpp  ch11_refraction.cpp  ch11_refractiontest.cpp  ch11_test.cpp  ch12_test.cpp  ch13_cone.cpp  ch13_test.cpp  ch14_test.cpp  ch15_teapot_objfile.cpp  ch16_test.cpp  ch5_test.cpp  ch6_test.cpp  ch7_test.cpp  ch9_test.cpp  christmasball_render.cpp  colour_test.cpp  cone_test.cpp  csg_test.cpp  cube_test.cpp  cylinder_test.cpp  dragon_scene.cpp  group_test.cpp  hw3render.cpp  intersect_test.cpp  light_test.cpp  material_test.cpp  math_test.cpp  matrix_test.cpp  objfile_test.cpp  pattern_test.cpp  plane_test.cpp  ray_test.cpp  sequence_test.cpp  shape_test.cpp  (+18 more)
